# AutoBook

./: .gitignore  README.md  main.py  pyproject.toml
app/: ai_tools.py  devices.py  document_tools.py  library.py  logging_utils.py  search.py  web_companion.py
docs/: release_checklist.md  release_notes.md  user_guide.md
plugins/: metadata_enricher.json
web/: app.js  index.html  styles.css
