[project]
name = "autobook-nihos"
version = "0.1.0"
description = "E-book downloader and library manager with device transfer support"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2",
    "Pillow>=10.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
